Solved the alignment problem

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -36,7 +36,7 @@ header{
     .small-logo{
         img{
             width: auto;
-            height: 72px;
+            height: 64px;
         }
     }
     ul{
@@ -44,6 +44,7 @@ header{
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        margin-bottom: 0.5rem;
         li{
             list-style: none;
             margin-right: 10px;
@@ -184,7 +185,7 @@ section{
     .text{
         position: absolute;
         z-index: 10;
-        bottom: 500px;
+        bottom: 50vh;
         width: 100vw;
         h1{
             margin: auto;
@@ -382,7 +383,6 @@ section{
 }
 @media (max-width: 500px){
     header{
-        align-items: center;
         .large-logo{
             display: none;
         }
